style: aineacion, fuente, fondo de tag body

--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <HTML>
-  <head>
-    <title>ch54</title>
-  </head>
-  <body>
-      <h1>Holiwis</h1>
-     </body>  
+
+<head>
+  <link rel="stylesheet" href="style.css">
+  <title>ch54</title>
+</head>
+
+<body>
+  <h1>Holiwis cara de bola</h1>
+</body>
+
 </HTML>
