feat: se agregaron parrafos

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
   <h1>Holiwis cara de bola</h1>
   <h2> Me gusta el pan de Oaxaca</h2>
+  <p>me gusta porque tiene saber a queso</p>
+  <p>el queso es bueno</p>
 </body>
 
 </HTML>
