feat: se agregro un boton para cambiar el nombre

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <h2> Me gusta el pan de Oaxaca</h2>
   <p>me gusta porque tiene saber a queso</p>
   <p>el queso es bueno</p>
+  <button>cambia el nombre</button>
 </body>
 
 </HTML>
