--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
   <h1>Holiwis cara de bola</h1>
   <h2> Me gusta el pan de Oaxaca</h2>
+  <button>Cambia la canción</button>
 </body>
 
 </HTML>
